# YetAnotherPicSearch4Telegram

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml  requirements.txt  start.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: dependabot-auto-merge.yml
bot/: __init__.py  __main__.py  ascii2d.py  config.py  ehentai.py  google.py  iqdb.py  nhentai.py  nhentai_model.py  saucenao.py  utils.py  whatanime.py  yandex.py
bot/modules/: __init__.py  picture_search.py
src/: __init__.py  ascii2d.py  ehentai.py  iqdb.py  saucenao.py  utils.py  whatanime.py
userbot/: __init__.py  __main__.py  ascii2d.py  baidu.py  config.py  ehentai.py  google.py  iqdb.py  nhentai.py  saucenao.py  utils.py  whatanime.py  yandex.py
userbot/modules/: picture_search.py
